--- a/SolidWorksLibrary/SolidWorksLibrary.csproj
+++ b/SolidWorksLibrary/SolidWorksLibrary.csproj
@@ -85,17 +85,19 @@
     <Compile Include="Builders\ElementsCase\IFeedbackBuilder.cs" />
     <Compile Include="Builders\Case\MonoBlockBuilder.cs" />
     <Compile Include="Builders\ElementsCase\MountingFrameBuilder.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\DeterminateCut.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\DeterminateCut.cs" />
     <Compile Include="Builders\ElementsCase\Panels\FrameCaseBuilder.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\BackProfils.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\BackProfils.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\DeleteModulFrameLessBuilder.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\Profiles.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\CompType_e.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\CompType_e.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\FramelessPanel.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\FramelessPartBuilder.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\InputHolesWrapper.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\OutputHolesWrapper.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\Screws.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\ValProfils.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\InputHolesWrapper.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\OutputHolesWrapper.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\Screws.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\ValProfils.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\SuppressModulFrameLessBuilder.cs" />
     <Compile Include="Builders\ElementsCase\Panels\PanelBuilder.cs" />
     <Compile Include="Builders\ElementsCase\Vector.cs" />
     <Compile Include="Builders\Pdf\PdfBuilder.cs" />
@@ -116,7 +118,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Builders\ElementsCase\MonoBlocks\" />
-    <Folder Include="Builders\ElementsCase\Panels\Frameless\Components\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
