--- a/ConsoleServiceHost/App.config
+++ b/ConsoleServiceHost/App.config
@@ -11,8 +11,9 @@
 
     </behaviors>
     <services>
-      <service behaviorConfiguration="mexBehaviour" name="ServiceLibrary.ConcreteService.VentsManagingWebService">
-        <endpoint address="VentsManagingWebService" binding="basicHttpBinding" contract="ServiceLibrary.ServiceInterface.ISolidWebService" />
+      <service behaviorConfiguration="mexBehaviour" name="ServiceLibrary.ConcreteService.CadWebService">
+        <endpoint address="VentsManagingWebService" binding="basicHttpBinding"
+          contract="ServiceLibrary.ServiceInterface.ISolidWebService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
