--- a/SolidWorksLibrary/app.config
+++ b/SolidWorksLibrary/app.config
@@ -1,3 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="SolidWorksLibrary.Properties.Settings.SWPlusDBConnectionString"
+            connectionString="Data Source=pdmsrv;Initial Catalog=SWPlusDB;Persist Security Info=True;User ID=airventscad;Password=1"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
