--- a/SolidWorksLibrary/SolidWorksLibrary.csproj
+++ b/SolidWorksLibrary/SolidWorksLibrary.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,10 +35,6 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AddFeatureContextMenu, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\AddFeatureContextMenu\AddFeatureContextMenu\bin\Debug\AddFeatureContextMenu.dll</HintPath>
-    </Reference>
     <Reference Include="DataBaseDomian">
       <HintPath>..\DataBaseDomian\bin\Release\DataBaseDomian.dll</HintPath>
     </Reference>
@@ -68,9 +65,13 @@
       <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\api\redist\SolidWorks.Interop.swpublished.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -79,6 +80,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="VentsMaterials">
+      <HintPath>..\VentsMaterials\VentsMaterials - DLL\bin\Debug\VentsMaterials.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builders\Case\FramelessBlock.cs" />
@@ -100,7 +104,7 @@
     <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\WindowProfils.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\Profiles.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\FramelessPanel.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\Frameless\FramelessPartBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\FramelessPanelBuilder.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\InputHolesWrapper.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\OutputHolesWrapper.cs" />
     <Compile Include="Builders\ElementsCase\Panels\Frameless\Components\Screws.cs" />
@@ -111,13 +115,40 @@
     <Compile Include="Builders\ElementsCase\RoofBuilder.cs" />
     <Compile Include="Builders\ElementsCase\SpigotBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="SolidWorksAdapter.cs" />
+    <Compile Include="tbAssemblyName.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>tbAssemblyName.dbml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Builders\ElementsCase\MonoBlocks\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="tbAssemblyName.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>tbAssemblyName.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tbAssemblyName.dbml.layout">
+      <DependentUpon>tbAssemblyName.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
