--- a/DataBaseDomian/app.config
+++ b/DataBaseDomian/app.config
@@ -6,10 +6,14 @@
         <add name="DataBaseDomian.Properties.Settings.TaskDataBaseConnectionString"
             connectionString="Data Source=pdmsrv;Initial Catalog=TaskDataBase;Persist Security Info=True;User ID=AirVentsCad;Password=1"
             providerName="System.Data.SqlClient" />
-     
-      <add name="DataBaseDomian.Properties.Settings.SWPlusDBConnectionString"
+        <add name="DataBaseDomian.Properties.Settings.SWPlusDBConnectionString"
             connectionString="Data Source=pdmsrv;Initial Catalog=SWPlusDB;Persist Security Info=True;User ID=AirVentsCad;Password=1"
             providerName="System.Data.SqlClient" />
-      
+        <add name="DataBaseDomian.Properties.Settings.TaskDataBaseConnectionString1"
+            connectionString="Data Source=pdmsrv;Initial Catalog=TaskDataBase;Persist Security Info=True;User ID=AirVentsCad"
+            providerName="System.Data.SqlClient" />
+        <add name="DataBaseDomian.Properties.Settings.SWPlusDBConnectionString1"
+            connectionString="Data Source=pdmsrv;Initial Catalog=SWPlusDB;User ID=airventscad;Password=1;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
