--- a/ConsoleServiceHost/ConsoleServiceHost.csproj
+++ b/ConsoleServiceHost/ConsoleServiceHost.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ConsoleServiceHost_TemporaryKey.pfx" />
     <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup>
