--- a/VentsMaterials/VentsMaterials - DLL/VentsMaterials - DLL.csproj
+++ b/VentsMaterials/VentsMaterials - DLL/VentsMaterials - DLL.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VentsMaterials</RootNamespace>
-    <AssemblyName>VentsMaterials2</AssemblyName>
+    <AssemblyName>VentsMaterials</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -57,12 +57,6 @@
     <Compile Include="SetMaterials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToSQL.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\MessageLibrary\Patterns.csproj">
-      <Project>{D0ABF979-D32B-453D-92D5-F9BC7BDEC44E}</Project>
-      <Name>Patterns</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
